# cmake-buildtest

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  Releasenotes.md  hello-world.cpp
Docker/Debian/: Dockerfile  Dockerfile_noUpload
Docker/Fedora/: Dockerfile  Dockerfile_noUpload
